--- a/roles/updatechart/tasks/main.yml
+++ b/roles/updatechart/tasks/main.yml
@@ -2,4 +2,4 @@
 - name: Copy new charts
   template: src={{ item }} dest=/ecp_share/appstore/repository/local/
   with_fileglob:
-    - ../template/*
+    - ../templates/*
